# grokking_algorithms

./: README.MD  pyproject.toml
binary search/: main.py
selection sort/: main.py
