[tool.poetry]
name = "algoritms"
version = "0.1.0"
description = ""
authors = ["Spartan327 <vbutovchenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.5.6"
flake8 = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
